# Advanced-Programming-Labs-A

./: .gitignore  CMakeLists.txt
02-Temperature/: Temperature.cpp
03-Types/: Types.cpp
04-FloatingPointPrecision/: FloatingPointPrecision.cpp
05-Iteration/: Iteration.cpp
LabBook/: 01-HelloWorld.tex  02-Temperature.tex  03-Types.tex  04-FloatingPointPrecision.tex  05-Iteration.tex  06-Average.tex  CMakeLists.txt  Header.tex  Lab-A.tex  main.tex
Tasks/: CMakeLists.txt
Tasks/01-HelloWorld/: CMakeLists.txt  HelloWorld.cpp
Tasks/02-Temperature/: CMakeLists.txt
Tasks/03-Types/: CMakeLists.txt  Types.cpp
Tasks/04-FloatingPointPrecision/: CMakeLists.txt  FloatingPointPrecision.cpp
Tasks/05-Iteration/: CMakeLists.txt  Iteration.cpp
Tasks/06-Average/: Average.cpp  CMakeLists.txt
Temperature/: Temperature.cpp
